--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bscalper-bot",
   "version": "0.1.0",
   "private": false,
-  "type": "module",
+  
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node --transpile-only src/index.ts",
     "test": "vitest run"
   },
   "dependencies": {
